--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ replay_pid*
 /CODE_DESIGNAL/OTROS(INTERESANTE)/Proyect_1.13/target/
 /CODE_DESIGNAL/C_ChatGPT/Proyect_1.15/target/
 /CODE_DESIGNAL/S_ChatGPT/Proyect_1.17/target/
+/CODE_DESIGNAL/INTERVIEW_PRACTICE/Arrays_1/target/
+/CODE_DESIGNAL/INTERVIEW_PRACTICE/Arrays_2/target/
+/CODE_DESIGNAL/INTERVIEW_PRACTICE/Arrays_3/target/
+/CODE_DESIGNAL/INTERVIEW_PRACTICE/Arrays_5/target/
