--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ replay_pid*
 /CODE_DESIGNAL/INTERVIEW_PRACTICE/Arrays_2/target/
 /CODE_DESIGNAL/INTERVIEW_PRACTICE/Arrays_3/target/
 /CODE_DESIGNAL/INTERVIEW_PRACTICE/Arrays_5/target/
+/CODE_DESIGNAL/S_ChatGPT/Proyect_1.18/target/
